<resources>
    <string name="app_name">Paradox Governer</string>

    <string name="account_button_text">账户</string>
    <string name="new_record_button_text">新记账</string>
    <string name="statistics_button_text">统计</string>
    <string name="gragh_button_text">图表</string>

    <string name="income_button_text">收入</string>


    <string name="amount_text">金额</string>
    <string name="description_text">描述</string>
    <string name="member_text">成员</string>
    <string name="new_member_button_text">新建</string>
    <string name="category_text">一级分类</string>
    <string name="new_category_button_text">新建</string>
    <string name="subcategory_text">二级分类</string>
    <string name="new_subcategory_button_text">新建</string>
    <string name="type_text">记账类型</string>
    <string name="new_merchant_button_text">新建</string>
    <string name="merchant_text">商家</string>
    <string name="new_item_button_text">新建</string>
    <string name="item_text">项目</string>
    <string name="save_template">保存模板</string>
    <string name="use_template">使用模板</string>


    <string name="time_select_button_text">选择时间</string>


    <string name="confirm_button_text_new">确认新建</string>
    <string name="cancel_button_text_new">取消新建</string>
    <string name="confirm_button_text_old">确认修改</string>
    <string name="cancel_button_text_old">删除</string>
    <string name="cancel_change_button_text">取消修改</string>

    <string name="description_hint_text">输入记账的描述</string>
    <string name="set_time_button_text">选择时间</string>
    <string name="title_activity_bottom">MainActivity</string>


    <string name="nav_all_text">全部</string>
    <string name="nav_income_text">收入</string>
    <string name="nav_outlay_text">支出</string>
    <string name="nav_loan_text">借贷</string>
    <string name="nav_transfer_text">转账</string>


    <string name="title_home">主页面</string>
    <string name="title_dashboard">统计</string>
    <string name="title_graph">图表</string>
    <string name="title_personal">个人中心</string>

    <!--CardView-->
    <string name="cardview_description_member">成员</string>
    <string name="cardview_description_amount">金额</string>
    <string name="cardview_description_category">一级分类</string>
    <string name="cardview_description_subcategory">二级分类</string>
    <string name="cardview_description_merchant">商家</string>
    <string name="cardview_description_item">项目</string>
    <string name="cardview_description_type">记账类型</string>
    <string name="cardview_description_description">描述</string>
    <string name="cardview_description_datetime">时间</string>
    <string name="cardview_description_account">账户</string>

    <string name="personal_manage_customize">管理自定义选项</string>
    <string name="personal_manage_customize_new">新增</string>
    <string name="personal_manage_customize_change">修改/删除</string>

    <string name="new_account_button_text">新建账户</string>
    <string name="select_account_text">选择账户</string>
    <string name="select_account_spinner_text">账户</string>


    <string name="personal_pwd_management_text">密码管理</string>
    <string name="personal_pwd_reset_text_button">重置密码</string>
    <string name="personal_pwd_reset_pattern_button">重置手势密码</string>


    <string name="nav_fcatout">一级分类支出</string>
    <string name="nav_scatout">二级分类支出</string>
    <string name="nav_fcatin">一级分类收入</string>
    <string name="nav_scatin">二级分类收入</string>
    <string name="nav_memout">成员支出</string>
    <string name="nav_memin">成员收入</string>
    <string name="nav_mercout">商家支出</string>
    <string name="nav_mercin">商家收入</string>
    <string name="nav_accout">账户支出</string>
    <string name="nav_accin">账户收入</string>
    <string name="nav_itemout">项目支出</string>
    <string name="nav_itemin">项目收入</string>


    <string name="personal_theme_text">设置主题颜色</string>


    <string name="stat_set_condition">设置筛选条件</string>
    <string name="stat_start_search_button">确认</string>
    <string name="stat_confirm_condition_button">开始设置条件</string>


    <string name="dashboard_add_condition_button">添加条件</string>

    <string name="conf_start">设置开始时间</string>
    <string name="conf_end">设置结束时间</string>


    <string name="dashboard_view_all_button">各账户总体统计</string>
</resources>